Fix alignment of boxes on small screens

--- a/css/size-dependent-styles.css
+++ b/css/size-dependent-styles.css
@@ -82,6 +82,7 @@
     .box {
         width: auto !important;
         margin: 0.5em 0 !important;
+        float: none !important;
     }
 }
 @media screen and (max-width: 90em) {
